tests/fixtures/valid/docs_release_void.lby
fn release ptr ptr_i64 -> void
    dealloc(ptr)
    return
