tests/fixtures/invalid/read_file_path_type.lby
fn bad -> string
    read_file(1)
